优化u用户信息编辑框样式

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -5,6 +5,8 @@
 @import './sidebar.scss';
 
 body {
+  // margin: 0;
+  // padding: 0;
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
